# diode

./: .gitignore  CLAUDE.md  README.md  concept.md  pyproject.toml
docs/: architecture.md  waves.md
src/diode/: __init__.py  compiler.py  completion.py  hover.py  index.py  project.py  server.py  types.py
tests/: conftest.py  test_compiler.py  test_completion.py  test_index.py  test_project.py  test_server.py
tests/fixtures/: README.md  bad.sv  completion.sv  completion_structs.sv  parameterized.sv  simple_module.sv
tests/fixtures/cross_file/: pkg.sv  sub.sv  top.sv
tests/fixtures/project/: bad.toml  cycle_a.f  cycle_b.f  diode.toml  diode_with_filelist.toml  main.f  nested.f
tests/fixtures/project/includes/: defs.svh
tests/fixtures/project/sv_sources/: mod_a.sv  mod_b.sv
