[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diode-ls"
version = "0.1.0"
description = "A SystemVerilog language server built on pyslang, designed for FPGA engineers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "wangahrah" },
]
keywords = ["systemverilog", "lsp", "fpga", "language-server", "hdl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "pygls>=2.1",
    "pyslang>=10.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-lsp>=1.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
diode-ls = "diode.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
